--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@discordjs/rest": "^1.1.0",
     "@discordjs/voice": "^0.11.0",
+    "booru": "^2.6.3",
     "discord.js": "^14.3.0",
     "dotenv": "^16.0.2",
     "ffmpeg": "^0.0.4",
