--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@discordjs/rest": "^1.1.0",
-    "@discordjs/voice": "^0.11.0",
+    "@discordjs/rest": "^1.6.0",
+    "@discordjs/voice": "^0.15.0",
     "booru": "^2.6.3",
-    "discord.js": "^14.3.0",
-    "dotenv": "^16.0.2",
+    "discord.js": "^14.8.0",
+    "dotenv": "^16.0.3",
+    "erela.js": "^2.4.0",
     "ffmpeg": "^0.0.4",
     "ffmpeg-static": "^5.1.0",
     "g-i-s": "^2.1.6",
-    "play-dl": "^1.9.5",
-    "yt-search": "^2.10.3",
+    "play-dl": "^1.9.6",
+    "yt-search": "^2.10.4",
     "ytdl-core": "^4.11.2"
   }
 }
