--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,12 +14,14 @@
     "@discordjs/rest": "^1.6.0",
     "@discordjs/voice": "^0.15.0",
     "booru": "^2.6.3",
+    "cli-spinners": "^1.3.1",
     "discord.js": "^14.8.0",
     "dotenv": "^16.0.3",
     "erela.js": "^2.4.0",
     "ffmpeg": "^0.0.4",
     "ffmpeg-static": "^5.1.0",
-    "g-i-s": "^2.1.6",
+    "chalk": "^4.0.0",
+    "ora": "^1.4.0",
     "play-dl": "^1.9.6",
     "yt-search": "^2.10.4",
     "ytdl-core": "^4.11.2"
