--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ffmpeg": "^0.0.4",
     "ffmpeg-static": "^5.1.0",
     "chalk": "^4.0.0",
+    "inquirer": "^8.0.0",
     "ora": "^1.4.0",
     "play-dl": "^1.9.6",
     "yt-search": "^2.10.4",
