--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ffmpeg-static": "^5.1.0",
     "chalk": "^4.0.0",
     "inquirer": "^8.0.0",
+    "inquirer-autocomplete-prompt": "^2.0.0",
     "ora": "^1.4.0",
     "play-dl": "^1.9.6",
     "yt-search": "^2.10.4",
